# hf-papers

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/research_crew/: __init__.py  crew.py  main.py
src/research_crew/config/: agents.yaml  tasks.yaml
src/research_crew/tools/: __init__.py  arxiv_tools.py  summarizer_tool.py  supabase_tool.py
src/research_crew/utils/: __init__.py
