[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-crew"
version = "0.1.0"
description = "An AI-powered research assistant for academic papers"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "streamlit>=1.24.0",
    "langchain>=0.0.267",
    "arxiv>=2.0.0",
    "feedparser>=6.0.10",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=1.0.3",
    "pyyaml>=6.0.1",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3 